# hwh-backend

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pr-gatekeeper.yml  pypi-publish.yml  python-publish.yml  test-only.yml  testpypi-publish.yml
src/hwh_backend/: build.py  hwh_config.py  logger.py  parser.py
tests/: conftest.py
tests/integration/: test_build_process.py  test_cython_dependencies.py  test_cython_interface.py  test_installation.py  test_interface_dependencies.py  test_library_linking.py  test_nested.py  test_package_layouts.py
tests/integration/fixtures/cython_interface/base_math/base_math/: __init__.pxd  __init__.py  operations.pxd  operations.pyx
tests/integration/fixtures/cython_interface/geometry/geometry/: __init__.pxd  __init__.py  shapes.pxd  shapes.pyx
tests/integration/fixtures/cython_interface/geometry/scripts/: assert_vector_in_geometry.py  assert_vector_in_geometry_mod.py
tests/integration/fixtures/cython_interface/scripts/: assert_geometry_operations.py  assert_vector_in_geometry_mod.py
tests/integration/fixtures/dependent_package/: MANIFEST.in
tests/integration/fixtures/dependent_package/dependent_package/: __init__.pxd  operations.pxd  operations.pyx
tests/integration/fixtures/dependent_package/scripts/: check_dependency.py  check_modified.py
tests/integration/fixtures/sample_package/: MANIFEST.in
tests/integration/fixtures/sample_package/sample_package/core/: base.pxd  base.pyx  plain.py
tests/integration/fixtures/sample_package/sample_package/extensions/: advanced.pxd  advanced.pyx
tests/integration/fixtures/sample_package/sample_package/extensions/specialized/: __init__.pxd  expert.pxd  expert.pyx
tests/integration/fixtures/sample_package/sample_package/utils/: __init__.pxd  helpers.pxd  helpers.pyx
tests/integration/fixtures/sample_package/scripts/: check_modified.py  verify_nested_imports.py
tests/unit/: test_build.py  test_config.py  test_package_discovery.py  test_parser.py
tests/utils/: package_utils.py  venv_utils.py  verification_utils.py
